--- a/index.html
+++ b/index.html
@@ -17,62 +17,70 @@
         <section class="contenedor1">
             <header class="header">
                 <div class="logo">
-                    <img src="./img/burger_logo.png" width="60" alt="Logo">
+                    <a href="./index.html"><img src="./img/burger_logo.png" width="60" alt="Logo"></a>
                 </div>
                 <nav class="nav">
                     <ul>
                         <li><a href="./pages/productos.html" class="enlace">Productos</a></li>
                         <li><a href="./pages/nosotros.html" class="enlace">Nosotros</a></li>
                         <li><a href="./pages/tiendas.html" class="enlace">Tiendas</a></li>
-                        <li><a href="./pages/contactanos.html" class="enlace">Contactanos</a></li>
+                        <li><a href="./pages/contactanos.html" class="boton">Contactanos</a></li>
                     </ul>
                 </nav>
             </header>
             <div class="banner">
                 <div class="banner_textos">
                     <h1>AMAMOS LAS HAMBURGUESAS</h1>
-                    <p class="centro">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda eligendi dicta ad
+                    <p class="centro">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda eligendi dicta
+                        ad
                         optio qui nesciunt
-                        nostrum facilis dolorem nihil repellat beatae in doloribus suscipit iure totam, unde sit perferendis
+                        nostrum facilis dolorem nihil repellat beatae in doloribus suscipit iure totam, unde sit
+                        perferendis
                         dolorum.</p>
-                        <a href="index.html#¿Qué dicen nuestros clientes?"></a>
+                    <a href="index.html#¿Qué dicen nuestros clientes?"></a>
                 </div>
             </div>
         </section>
-        <section class="contenedor2"></section>
+        <section class="contenedor2">
+
+            <section id="¿Qué dicen nuestros clientes?">
+                <h1 class="centro">¿Qué dicen nuestros clientes?</h1>
+                <p class="centro">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate
+                    eu
+                </p>
+
+                <!-- Cards -->
+                <div class="cards">
+                    <article class="card">
+                        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu
+                            pharetra
+                            nec"</p>
+                    </article>
+
+                    <article class="card">
+                        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu
+                            pharetra
+                            nec"</p>
+                    </article>
+
+                    <article class="card">
+                        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu
+                            pharetra
+                            nec"</p>
+                    </article>
+                </div>
+
+
+                <h3>¡De Argentina para el mundo, del rock a la gente!</h3>
+
+            </section>
+        </section>
         <section class="contenedor3"></section>
         <section class="contenedor4"></section>
         <section class="contenedor5"></section>
         <!-- Encabezado -->
 
 
-        <section id="¿Qué dicen nuestros clientes?">
-            <h1 class="centro">¿Qué dicen nuestros clientes?</h1>
-            <p class="centro">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu
-            </p>
-
-            <!-- Cards -->
-            <div class="cards">
-                <article class="card">
-                    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra
-                        nec"</p>
-                </article>
-
-                <article class="card">
-                    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra
-                        nec"</p>
-                </article>
-
-                <article class="card">
-                    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra
-                        nec"</p>
-                </article>
-            </div>
-
-
-            <h3>¡De Argentina para el mundo, del rock a la gente!</h3>
-
-        </section>
     </main>
 
 
