--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -6,11 +6,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rockburger - Contactanos</title>
-
+    <link rel="icon" href="./img/burger_logo-ico.ico">
+    <link rel="stylesheet" href="./bootstrap-5.3.0-alpha1-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./img/style/style.css">
 
 </head>
 
 <body>
+    <header class="header">
+        <div class="logo">
+            <a href="./index.html"><img src="./img/burger_logo.png" width="60" alt="Logo"></a>
+        </div>
+        <nav class="nav">
+            <ul>
+                <li><a href="./pages/productos.html" class="enlace">Productos</a></li>
+                <li><a href="./pages/nosotros.html" class="enlace">Nosotros</a></li>
+                <li><a href="./pages/tiendas.html" class="enlace">Tiendas</a></li>
+                <li><a href="./pages/contactanos.html" class="enlace">Contactanos</a></li>
+            </ul>
+        </nav>
+    </header>
+
     <h1>Contactanos</h1>
     <div>
         <img src="../img/Charly-telefono.jpg" alt="imagen contactanos">
