avances en index

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="./img/burger_logo-ico.ico">
     <link rel="stylesheet" href="./bootstrap-5.3.0-alpha1-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./img/style/style.css">
-
+    
 </head>
 
 <body>
@@ -27,6 +27,9 @@
                         <li><a href="./pages/contactanos.html" class="boton">Contactanos</a></li>
                     </ul>
                 </nav>
+                <button class="toggle">
+                    <img src="./img/menu2.png" width="35px" height="25px" alt="menu"></a>
+                </button>
             </header>
             <div class="banner">
                 <div class="banner_textos">
