--- a/pages/productos.html
+++ b/pages/productos.html
@@ -6,50 +6,69 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rockburger - Productos</title>
-
+    <link rel="stylesheet" href="../bootstrap-5.3.0-alpha1-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../img/style/style.css">
 
 </head>
 
-<body>
-    <h1>Productos</h1>
-    <ul>
-        <li>Clasica</li>
-        <li>Clasica</li>
-        <li>Clasica</li>
-        <li>Clasica</li>
-        <li>Clasica</li>
-        <li>Clasica</li>
-        <li>Clasica</li>
-        <li>Clasica</li>
-        <li>Clasica</li>
-        <li>Clasica</li>
-        <li>Clasica</li>
-        <li>Clasica</li>
-        <li>Clasica</li>
-        <li>Clasica</li>
 
-    </ul>
+<section>
 
-   <img src="../img/210995.jpg" alt="Hamburguesa">
-    <p>Descripción de la hamburguesa</p>
+    <body>
+        <header class="header">
+            <div class="logo">
+                <a href="../index.html"><img src="../img/burger_logo.png" width="60" alt="Logo"></a>
+            </div>
+            <nav class="nav">
+                <ul>
+                    <li><a href="../pages/productos.html" class="enlace">Productos</a></li>
+                    <li><a href="../pages/nosotros.html" class="enlace">Nosotros</a></li>
+                    <li><a href="../pages/tiendas.html" class="enlace">Tiendas</a></li>
+                    <li><a href="../pages/contactanos.html" class="boton">Contactanos</a></li>
+                </ul>
+            </nav>
+        </header>
 
-</body>
+        <h1 class="productos">Productos</h1>
+        <div id="carouselExample" class="carousel slide">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="../img/BBQ.png" class="d-block w-100" alt="BBQ">
+                </div>
+                <div class="carousel-item">
+                    <img src="../img/morada.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="../img/pay.png" class="d-block w-100" alt="...">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
 
-<footer>
 
-    <div>
-        <h3>SUSCRIBETE</h3>
-    </div>
+        <p>Descripción de la hamburguesa</p>
 
-    <div>
-        <ul>
-            <li>Facebook</li>
-            <li>Instagram</li>
-            <li>Twitter</li>
-        </ul>
-    </div>
 
-    <p>2023 Rockburger. Todos los derechos reservados.</p>
-</footer>
+    </body>
+    <footer>
+        <div class="redes">
+            <img src="../img/face.png" alt="logo facebook" width="40px" height="40px">
+            <img src="../img/insta.png" alt="logo instagram" width="40px" height="40px">
+            <img src="../img/twitter.png" alt="logo twitter" width="40px" height="40px">
+        </div>
+        <p class="copyright"><span> 2023 Rockburger. Todos los derechos reservados.</span></p>
+        <div>
+            <button type="button">SUSCRIBETE</button>
+        </div>
+
+    </footer>
+</section>
 
 </html>
