--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rockburger - Contactanos</title>
-    <link rel="icon" href="../img/burger_logo-ico.ico">
+    <link rel="icon" href="../img/burger_logoico.ico">
     <link rel="stylesheet" href="../bootstrap-5.3.0-alpha1-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../img/style/style.css">
 
