restructuracion, responsive, enlaces

--- a/index.html
+++ b/index.html
@@ -7,92 +7,94 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rockburger</title>
     <link rel="icon" href="./img/burger_logoico.ico">
-    <link rel="stylesheet" href="bootstrap-5.3.0-alpha1-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./img/style/style.css">
 
 </head>
 
 <body>
-    <main>
-        <section class="contenedor1">
-            <header class="header">
-                <div class="logo">
-                    <a href="./index.html"><img src="./img/burger_logo.png" width="80" alt="Logo"></a>
-                </div>
 
-                <nav class="nav">
-                    <button class="toggle">
-                        <img src="./img/menu2.png" width="35px" height="25px" alt="menu"></a>
-                    </button>
-                    <ul>
-                        <li><a href="./pages/productos.html" class="enlace">Productos</a></li>
-                        <li><a href="./pages/nosotros.html" class="enlace">Nosotros</a></li>
-                        <li><a href="./pages/tiendas.html" class="enlace">Tiendas</a></li>
-                        <li><a href="./pages/contactanos.html" class="boton">Contactanos</a></li>
-                    </ul>
-                </nav>
-
-            </header>
-            <div class="banner">
-                <div class="banner_textos">
-                    <h1>AMAMOS LAS HAMBURGUESAS</h1>
-                    <p class="centro">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda eligendi dicta
-                        ad
-                        optio qui nesciunt
-                        nostrum facilis dolorem nihil repellat beatae in doloribus suscipit iure totam, unde sit
-                        perferendis
-                        dolorum.</p>
-                    <a href="index.html#¿Qué dicen nuestros clientes?"></a>
-                </div>
+    <section class="contenedor1">
+        <header class="header">
+            <div class="logo">
+                <a href="./index.html"><img src="./img/burger_logo.png" width="100" alt="Logo"></a>
             </div>
+            <img class="menu_hamb" src="./img/burger_logo.png" alt="menu">
+            <input type="checkbox" id="menu">
+            <label for="menu">
+                <img src="./img/menu.png" class="menu_icono" alt="menu">
+            </label>
+            <nav class="nav">
+                <ul>
+                    <li><a href="./pages/productos.html" class="enlace">Productos</a></li>
+                    <li><a href="./pages/nosotros.html" class="enlace">Nosotros</a></li>
+                    <li><a href="./pages/tiendas.html" class="enlace">Tiendas</a></li>
+                    <li><a href="./pages/contactanos.html" class="boton">Contactanos</a></li>
+                </ul>
+            </nav>
+
+        </header>
+        <div class="banner">
+            <div class="banner_textos">
+                <h1>AMAMOS LAS HAMBURGUESAS</h1>
+                <p class="centro">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda eligendi dicta
+                    ad
+                    optio qui nesciunt
+                    nostrum facilis dolorem nihil repellat beatae in doloribus suscipit iure totam, unde sit
+                    perferendis
+                    dolorum.</p>
+                <a href="index.html#¿Qué dicen nuestros clientes?"></a>
+            </div>
+        </div>
+    </section>
+    <section class="contenedor2">
+
+        <section>
+            <div class="texto">
+                <h1 class="quedicen">¿Qué dicen nuestros clientes?</h1>
+                <p class="centro">¡Rockealas como quieras!</p>
+            </div>
+            <!-- Cards -->
+
+            <div class="cards">
+                <article class="card">
+                    <p>¡La Marley es lo más! Y es tal cual se ve en las fotos.</p>
+                </article>
+
+                <article class="card">
+                    <p>¡Son tremendas! ¡Mega hamburguesas! Me las recomendó un amigo, y fue lo mejor que me pasó en la
+                        vida!</p>
+                </article>
+
+                <article class="card">
+                    <p>En las juntadas con amigos nunca faltan las Rockburger</p>
+                </article>
+            </div>
+
+
+            <h3>¡De Argentina para el mundo, del rock a la gente!</h3>
+
         </section>
-        <section class="contenedor2">
 
-            <section>
-                <div class="texto">
-                    <h1 class="quedicen">¿Qué dicen nuestros clientes?</h1>
-                    <p class="centro">¡Rockealas como quieras!</p>
-                </div>
-                <!-- Cards -->
+        <footer>
+            <div class="redes">
+                <img src="./img/face.png" alt="logo facebook" width="40px" height="40px">
+                <img src="./img/insta.png" alt="logo instagram" width="40px" height="40px">
+                <img src="./img/twitter.png" alt="logo twitter" width="40px" height="40px">
+            </div>
+            <p class="copyright"><span> 2023 Rockburger. Todos los derechos reservados.</span></p>
+            <div>
+                <button type="button">SUSCRIBETE</button>
+            </div>
 
-                <div class="cards">
-                    <article class="card">
-                        <p>¡La Marley es lo más! Y es tal cual se ve en las fotos.</p>
-                    </article>
-
-                    <article class="card">
-                        <p>¡Son tremendas! ¡Mega hamburguesas! Me las recomendó un amigo, y fue lo mejor que me pasó en la vida!</p>
-                    </article>
-
-                    <article class="card">
-                        <p>En las juntadas con amigos nunca faltan las Rockburger</p>
-                    </article>
-                </div>
-
-
-                <h3>¡De Argentina para el mundo, del rock a la gente!</h3>
-
-            </section>
-
-            <footer>
-                <div class="redes">
-                    <img src="./img/face.png" alt="logo facebook" width="40px" height="40px">
-                    <img src="./img/insta.png" alt="logo instagram" width="40px" height="40px">
-                    <img src="./img/twitter.png" alt="logo twitter" width="40px" height="40px">
-                </div>
-                <p class="copyright"><span> 2023 Rockburger. Todos los derechos reservados.</span></p>
-                <div>
-                    <button type="button">SUSCRIBETE</button>
-                </div>
-        
-            </footer>
-        </section>
+        </footer>
+    </section>
 
 
 
 
-    </main>
-    
+
+
 
 
 </body>
