--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -6,28 +6,48 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rockburger - Nosotros</title>
-
+    <link rel="icon" href="../img/burger_logoico.ico">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js">
+    <link rel="stylesheet" href="../img/style/style.css">
 
 </head>
 
 <body>
-<h1>Nosotros</h1>
-<img src="#" alt="Imagen de Rockburger">
+    <section class="pagina_nosotros">
+        <header class="header">
+            <div class="logo">
+              <a href="../index.html"><img src="../img/burger_logo.png" width="100" alt="Logo"></a>
+            </div>
+            <nav class="nav">
+              <ul>
+                <li><a href="../pages/productos.html" class="enlace">Productos</a></li>
+                <li><a href="../pages/nosotros.html" class="enlace">Nosotros</a></li>
+                <li><a href="../pages/tiendas.html" class="enlace">Tiendas</a></li>
+                <li><a href="../pages/contactanos.html" class="boton">Contactanos</a></li>
+              </ul>
+            </nav>
+      
+          </header>
+
+        <h1 class="nosotros">Nosotros</h1>
+
+
+
+
+        <footer class="footerprod">
+            <div class="redes">
+                <img src="../img/face.png" alt="logo facebook" width="40px" height="40px">
+                <img src="../img/insta.png" alt="logo instagram" width="40px" height="40px">
+                <img src="../img/twitter.png" alt="logo twitter" width="40px" height="40px">
+            </div>
+            <p class="copyright"><span> 2023 Rockburger. Todos los derechos reservados.</span></p>
+            <div>
+                <button type="button">SUSCRIBETE</button>
+            </div>
+        </footer>
+    </section>
+
 </body>
-<footer>
 
-    <div>
-        <h3>SUSCRIBETE</h3>
-    </div>
-
-    <div>
-        <ul>
-            <li>Facebook</li>
-            <li>Instagram</li>
-            <li>Twitter</li>
-        </ul>
-    </div>
-
-    <p>2023 Rockburger. Todos los derechos reservados.</p>
-</footer>
 </html>
