--- a/index.html
+++ b/index.html
@@ -16,24 +16,23 @@
 
     <section class="contenedor1">
         <header class="header">
-            <div class="logo">
-                <a href="./index.html"><img src="./img/burger_logo.png" width="100" alt="Logo"></a>
-            </div>
-            <img class="menu_hamb" src="./img/burger_logo.png" alt="menu">
+            <img class="logo1" src="../img/burger_logo.png" alt="inicio">
             <input type="checkbox" id="menu">
             <label for="menu">
-                <img src="./img/menu.png" class="menu_icono" alt="menu">
+              <img src="../img/menu.png" class="menu-ico" alt="menu-ico">
             </label>
             <nav class="nav">
-                <ul>
-                    <li><a href="./pages/productos.html" class="enlace">Productos</a></li>
-                    <li><a href="./pages/nosotros.html" class="enlace">Nosotros</a></li>
-                    <li><a href="./pages/tiendas.html" class="enlace">Tiendas</a></li>
-                    <li><a href="./pages/contactanos.html" class="boton">Contactanos</a></li>
-                </ul>
+              <div class="menu1">
+              <ul>
+                <li><a href="../pages/productos.html" class="enlace">Productos</a></li>
+                <li><a href="../pages/nosotros.html" class="enlace">Nosotros</a></li>
+                <li><a href="../pages/tiendas.html" class="enlace">Tiendas</a></li>
+                <li><a href="../pages/contactanos.html" class="boton">Contactanos</a></li>
+              </ul>
+            </div>
+            <img class="logo2" src="../img/burger_logo.png" alt="logo2">
             </nav>
-
-        </header>
+          </header>
         <div class="banner">
             <div class="banner_textos">
                 <h1>AMAMOS LAS HAMBURGUESAS</h1>
