--- a/pages/productos.html
+++ b/pages/productos.html
@@ -18,9 +18,10 @@
 
     <header class="header">
       <img class="logo1" src="../img/burger_logo.png" alt="inicio">
+      <a href="../index.html"><img src="../img/burger_logo.png" alt=""></a>
       <input type="checkbox" id="menu">
       <label for="menu">
-        <img src="../img/menu.png" alt="menu-ico">
+        <img src="../img/menu.png" class="menu-ico" alt="menu-ico">
       </label>
       <nav class="nav">
         <div class="menu1">
