--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -16,18 +16,22 @@
 <body>
     <section class="pagina_nosotros">
         <header class="header">
-            <div class="logo">
-              <a href="../index.html"><img src="../img/burger_logo.png" width="100" alt="Logo"></a>
-            </div>
+            <img class="logo1" src="../img/burger_logo.png" alt="inicio">
+            <input type="checkbox" id="menu">
+            <label for="menu">
+              <img src="../img/menu.png" class="menu-ico" alt="menu-ico">
+            </label>
             <nav class="nav">
+              <div class="menu1">
               <ul>
                 <li><a href="../pages/productos.html" class="enlace">Productos</a></li>
                 <li><a href="../pages/nosotros.html" class="enlace">Nosotros</a></li>
                 <li><a href="../pages/tiendas.html" class="enlace">Tiendas</a></li>
                 <li><a href="../pages/contactanos.html" class="boton">Contactanos</a></li>
               </ul>
+            </div>
+            <img class="logo2" src="../img/burger_logo.png" alt="logo2">
             </nav>
-      
           </header>
 
         <h1 class="nosotros">Nosotros</h1>
